--- a/app/interfaces/templates/index.html
+++ b/app/interfaces/templates/index.html
@@ -15,8 +15,9 @@
             <i class="fab fa-whatsapp"></i> Prontoa
         </a>
         
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation" title="Toggle navigation">
+            <span class="navbar-toggler-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Toggle navigation</span>
         </button>
         
         <div class="collapse navbar-collapse" id="navbarNav">
