--- a/app/interfaces/templates/settings.html
+++ b/app/interfaces/templates/settings.html
@@ -38,7 +38,7 @@
                 <i class="fas fa-cog"></i>
                 <span>Settings</span>
             </a>
-            <a href="{{ url_for('viewpages.login') }}" class="menu-item text-danger">
+            <a href="{{ url_for('viewpages.logout') }}" class="menu-item text-danger">
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Salir</span>
             </a>
